Exibição medalha aluno

--- a/src/main/resources/static/aluno/principal.html
+++ b/src/main/resources/static/aluno/principal.html
@@ -79,7 +79,7 @@
         <a class="nav-link" data-toggle="pill" href="#projetosAtribuidos">Adicionar um novo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="pill" href="#medalhas">Medalhas</a>
+        <a class="nav-link active2" data-toggle="pill" href="#medalhas">Medalhas</a>
       </li>
     </ul>
   </div>
@@ -119,8 +119,8 @@
         <thead>
           <tr>
             <th scope="col"><a onclick="alert('Ola')">Materia</a></th>
-            <th scope="col">ID Professor</th>
-            <th scope="col">ID Aluno</th>
+            <th scope="col">Professor</th>
+            <th scope="col">Aluno</th>
             <th scope="col"></th>
           </tr>
         </thead>
