digite sua mensagem de commit aqui

--- a/src/main/resources/static/aluno/principal.html
+++ b/src/main/resources/static/aluno/principal.html
@@ -119,8 +119,8 @@
         <thead>
           <tr>
             <th scope="col"><a onclick="alert('Ola')">Materia</a></th>
+            <th scope="col">Nível</th>
             <th scope="col">Professor</th>
-            <th scope="col">Aluno</th>
             <th scope="col"></th>
           </tr>
         </thead>
